   - Rebar sample demonstrates a vertical ReBar containing a vertical ToolBar.   
 
* The Themes sample now demonstrates how to save a band's size and position 
  in the registry.
   

Changes in detail
-----------------
Added CFrame::DrawReBarBkgnd
Added CDockContainer::OnMouseMove
Added CDockContainer::SetHideSingleTab
Added CDockContainer::SwapTabs
Added CDocker::GetViewRect
Modified CTabbedMDI::GetTab				now returns CWnd*

Added user defined messages:
UWM_GETFRAMEVIEW:		Used by CFrame.  Returns the view window's HWND 
UWN_DRAWRBBKGND:        Used by CFrame.  Called for ReBar background redrawing
UWN_TABDRAGGED:         Used by CTabbedMDI. Called when a CTab's tab is dragged


Version 7.5.1
=============
Bug Fixes:
* Fixed memory leak in CDIObject
* Hand cursor is now displayed over hyperlink in DialogDemo sample
* Removed flicker for CMenuBar when run on Windows 98


Version 7.5
===========
Bug Fixes:
* The drop-down lists for combo boxes are now displayed correctly.
* Fix for ToolBars on Win95

New Features and Enhancements
-----------------------------
* Added CRichEdit. This class provides support for Rich Edit controls
* Updated the approach to using threads
   - CWinThread is used in place of CThread.
   - CWinApp now inherits from CWinThread.
   - GUI threads are now implemented without multiple inheritance. Refer to
     the Threads and DirectX samples for an example of how to create GUI
	 threads.
   - CWinThread provides a constructor to facilitate worker threads. This 
     constructor allows users to specify the thread's callback function and
     a LPVOID pParams parameter.
   - The thread is now created using the CreateThread member function rather
     than being automatically created in the constructor. This provides more
	 control over if and when the thread is created.
* Updated CWinApp
   - CWinApp now inherits from CWinThread. Some member functions were moved
     from CWinApp to CWinThread.