@@ -826,7 +826,8 @@ namespace Win32xx
 
 			// Recreate the Disabled imagelist
 			m_imlMenuDis.DeleteImageList();
-			m_imlMenuDis.Attach( CreateDisabledImageList(m_imlMenu.GetHandle() ) );
+		//	m_imlMenuDis.Attach( CreateDisabledImageList(m_imlMenu.GetHandle()) );
+			m_imlMenuDis.CreateDisabledImageList(&m_imlMenu);
 
 			return TRUE;
 		}
@@ -909,13 +910,15 @@ namespace Win32xx
 			}
 			else
 			{
-				m_imlMenuDis.Attach( CreateDisabledImageList(m_imlMenu.GetHandle() ) );
+			//	m_imlMenuDis.Attach( CreateDisabledImageList(m_imlMenu.GetHandle()) );
+				m_imlMenuDis.CreateDisabledImageList(&m_imlMenu);
 			}
 		}
 		else
 		{
 			m_imlMenuDis.DeleteImageList();
-			m_imlMenuDis.Attach( CreateDisabledImageList(m_imlMenu.GetHandle() ) );
+		//	m_imlMenuDis.Attach( CreateDisabledImageList(m_imlMenu.GetHandle()) );
+			m_imlMenuDis.CreateDisabledImageList(&m_imlMenu);
 		}
 
 		// return the number of menu icons
@@ -3000,7 +3003,7 @@ namespace Win32xx
 		else
 		{
 			pImageList->DeleteImageList();
-			pImageList->Attach( CreateDisabledImageList(m_ToolBarImages.GetHandle()) );
+			pImageList->CreateDisabledImageList(&m_ToolBarImages);
 			pToolBar->SetDisableImageList(pImageList);
 		}
 
